# ticcltools

./: .gitignore  .travis.yml  AUTHORS  Dockerfile  Makefile.am  NEWS  README  README.md  TODO  bootstrap.sh  build-deps.sh  codemeta.json  configure.ac  entrypoint.sh
.github/workflows/: cleanup.yml  ticcltools.yml
docs/: Makefile.am  TICCL-LDcalc.1  TICCL-anahash.1  TICCL-chain.1  TICCL-chainclean.1  TICCL-indexer.1  TICCL-lexclean.1  TICCL-lexstat.1  TICCL-mergelex.1  TICCL-rank.1  TICCL-stats.1  TICCL-unk.1
include/: Makefile.am
include/ticcl/: Makefile.am  ticcl_common.h  unicode.h  word2vec.h
m4/: Makefile.am
src/: Makefile.am  TICCL-LDcalc-roaring.cxx  TICCL-LDcalc.cxx  TICCL-anahash.cxx  TICCL-chain.cxx  TICCL-chainclean.cxx  TICCL-indexer-par.cxx  TICCL-indexer.cxx  TICCL-indexerNT-roaring.cxx  TICCL-indexerNT.cxx  TICCL-lexclean.cxx  TICCL-lexstat.cxx  TICCL-mergelex.cxx  TICCL-rank.cxx  TICCL-roarindexerNT.cxx  TICCL-stats.cxx  TICCL-unk.cxx  W2V-analogy.cxx  W2V-dist.cxx  W2V-near.cxx  indexerNT.cxx  indexerNT2.cxx  ticcl_common.cxx  word2vec.cxx
tests/: .gitignore  README.txt  TICCLopsTEST.pl  smallunktest.sh  smalluntest.sh  testall.sh  testallNT.sh  testanahash.sh  testbook-roar.sh  testbook.sh  testbookNT.sh  testchain.sh  testchainclean.sh  testldcalc.sh  testngram.sh  testrank.sh  testroar.sh  teststats.sh  testunk.sh  testunkgold.sh  testwvrank.sh  unk.rules
tests/BOOK/: dpo.35.mpeg21.0007.alto.folia.xml  dpo.35.mpeg21.0009.alto.folia.xml  dpo.35.mpeg21.0011.alto.folia.xml  dpo.35.mpeg21.0012.alto.folia.xml  dpo.35.mpeg21.0013.alto.folia.xml  dpo.35.mpeg21.0014.alto.folia.xml  dpo.35.mpeg21.0015.alto.folia.xml  dpo.35.mpeg21.0016.alto.folia.xml  dpo.35.mpeg21.0017.alto.folia.xml  dpo.35.mpeg21.0018.alto.folia.xml  dpo.35.mpeg21.0019.alto.folia.xml  dpo.35.mpeg21.0020.alto.folia.xml  dpo.35.mpeg21.0021.alto.folia.xml  dpo.35.mpeg21.0022.alto.folia.xml  dpo.35.mpeg21.0023.alto.folia.xml  dpo.35.mpeg21.0024.alto.folia.xml  dpo.35.mpeg21.0025.alto.folia.xml  dpo.35.mpeg21.0026.alto.folia.xml  dpo.35.mpeg21.0027.alto.folia.xml  dpo.35.mpeg21.0028.alto.folia.xml  dpo.35.mpeg21.0031.alto.folia.xml  dpo.35.mpeg21.0032.alto.folia.xml  dpo.35.mpeg21.0033.alto.folia.xml  dpo.35.mpeg21.0034.alto.folia.xml  dpo.35.mpeg21.0035.alto.folia.xml  dpo.35.mpeg21.0036.alto.folia.xml  dpo.35.mpeg21.0037.alto.folia.xml  dpo.35.mpeg21.0038.alto.folia.xml  dpo.35.mpeg21.0039.alto.folia.xml  dpo.35.mpeg21.0040.alto.folia.xml  dpo.35.mpeg21.0041.alto.folia.xml  dpo.35.mpeg21.0042.alto.folia.xml  dpo.35.mpeg21.0043.alto.folia.xml  dpo.35.mpeg21.0044.alto.folia.xml  dpo.35.mpeg21.0045.alto.folia.xml  dpo.35.mpeg21.0046.alto.folia.xml  dpo.35.mpeg21.0047.alto.folia.xml  dpo.35.mpeg21.0048.alto.folia.xml  dpo.35.mpeg21.0049.alto.folia.xml  dpo.35.mpeg21.0050.alto.folia.xml  (+297 more)
tests/DATA/: lines.txt
tests/FOLIA/: dpo.35.mpeg21.0102.alto.folia.xml  dpo.35.mpeg21.0103.alto.folia.xml
tests/OUTreference/: charconf.out  ngram.c5.af.rank  ngram.c5.af1.rank  ngram.c5.af12.rank  ngram.c5.af2.rank  ngram.c5.rank.sorted  ngram.ldcalc.ambi  ngram.rank.sorted  rank.sorted
tests/OUTreference/BOOK/: acro  book.1.ranked  book.NT.ranked  caseless.rank.chained  chained.clean  foci  punct  rank.NT.sorted  rank.chained  rank.chained.debug  rank.sorted  ranked  unk
tests/OUTreference/OK/: dict.lc.chars  foci  index  indexNT  indexNT.R  ldcalc  ldcalcNT  punct  rank.NT.sorted  rank.sorted
tests/OUTreference/testanahash/: foci
tests/OUTreference/testldcalc/: ldcalc
tests/TESTDATA/: acro  clean2  fore.clean  gold.tsv  gold1.acro  gold1.fore.clean  gold1.punct  gold1.unk  gold2.clean  gold2.punct  gold2.unk  hemp.data  lines.1  lines.2  lines.3  morse.chained  new.chained  punct  punct2  small.acro  small.punct  small.unk  smallunktest.tsv  test.chained  unk  unk2  unktest.tsv
tests/TESTRESULTS/: gold2.clean  gold2.punct  gold2.unk
tests/TICCLconfig/: TICCL.TEST.config
