# $Id: Makefile.am 8993 2011-03-21 11:19:11Z sloot $
# $URL: https://ilk.uvt.nl/svn/trunk/sources/Timbl6/docs/Makefile.am $

man1_MANS = TICCL-unk.1 TICCL-anahash.1 TICCL-indexer.1 \
	TICCL-lexstat.1 TICCL-rank.1 TICCL-stats.1 TICCL-LDcalc.1 \
	TICCL-chain.1 TICCL-chainclean.1 TICCL-lexclean.1 TICCL-mergelex.1

EXTRA_DIST = TICCL-unk.1 TICCL-anahash.1 TICCL-indexer.1 \
	TICCL-lexstat.1 TICCL-rank.1 TICCL-stats.1 TICCL-LDcalc.1 \
	TICCL-chain.1 TICCL-chainclean.1 TICCL-lexclean.1 TICCL-mergelex.1
